Refactored whole calculations: transferred logic to domain object, used BigDecimals